# open-gl-simple-view

./: .gitmodules  README.md
mcml-view/: CMakeLists.txt  rebuild.sh
mcml-view/html/: cef-echo.html  common.js  common_main.ts  main.html  style.css  ws-simple.html
mcml-view/py/: plot.py
mcml-view/src/: cef-async.cpp  gl_draw.h  main.cpp  ws_server.h
mcml-view/src/cef/: client.hpp  render.hpp  types.hpp
mcml-view/src/mcml-old/: gl_draw.h  main.cpp  mcml_types.h
simple-view/: CMakeLists.txt  simple-view.sln  simple-view.vcxproj
simple-view/html/: cef-echo.html  ws-simple.html
simple-view/src/: cef-async.cpp  gl_draw.h  main.cpp  ws_server.h
simple-view/src/cef/: client.hpp  render.hpp  types.hpp
simple-view/src/utils/: directory.hpp
